Test: changed background color to yellow

--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -1,6 +1,6 @@
 body {
   background-color: #f5e942;
-  background-image: url(/img/notepad.jpg);
+  /* background-image: url(/img/notepad.jpg); */
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
