added color to h1, added top padding of 100px to the h1 to pushcontent down on the img

--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -12,9 +12,12 @@ p {
   font-weight: bolder;
   text-shadow: rgb(128, 0, 0);
 }
+h1 {
+  color: blueviolet;
+}
 .journal_header {
   text-align: center;
-  padding-top: 90px;
+  padding-top: 100px;
 }
 .journal_fields {
   display: flex;
