--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -13,7 +13,7 @@ p {
   text-shadow: rgb(128, 0, 0);
 }
 h1 {
-  color: blueviolet;
+  color: black;
 }
 .journal_header {
   text-align: center;
@@ -28,4 +28,21 @@ h1 {
   display: flex;
   justify-content: center;
 }
+.entryLog {
+  padding-top: 15px;
+  display: flex;
+  justify-content: space-evenly;
+  flex-basis: auto;
+  flex: 0 1 calc(25% - 1em);
+  flex-wrap: wrap;
+}
+.journal-card {
+  border: 4px solid #a38250;
+  width: 35%;
+  margin: 10px 10px;
+  background-color: #dadada;
+  opacity: -10%;
+  text-align: center;
+}
+
 /* end of styles */
