--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -22,7 +22,7 @@ h1 {
 .journal_fields {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 85%;
 }
 .journal_form {
   display: flex;
@@ -39,13 +39,15 @@ h1 {
 }
 .journal-card {
   border: 4px solid #a38250;
-  width: 28%;
+  width: 24%;
   margin: 10px 10px;
   background-color: #dadada;
   opacity: 0.9;
+  padding-bottom: 10px;
   padding-left: 25px;
   padding-right: 25px;
   text-align: center;
+  border-radius: 30%;
 }
 
 /* end of styles */
