--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -51,6 +51,9 @@ h1 {
   border-radius: 10%;
   font-family: "Varela Round", sans-serif;
 }
+.journal-card:hover {
+  background-color: lightskyblue;
+}
 /* font awesome font size  */
 .fas {
   font-size: x-large;
