post, delete work without refresh, edit button works but causes api json server to crash after edit

--- a/src/styles/journal.css
+++ b/src/styles/journal.css
@@ -27,7 +27,8 @@ h1 {
 }
 .journal_form {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
+  margin: auto;
 }
 .entryLog {
   padding-top: 15px;
